--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -11,8 +11,10 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@600&family=Playfair+Display&family=Roboto:wght@100&family=Tilt+Prism&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@600&family=Playfair+Display&family=Roboto:wght@100&family=Tilt+Prism&family=Ubuntu&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -41,15 +43,14 @@
 </head>
 
 <body style="background-image: none;">
-    <%- include('./partials/flash')%>
         <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
             <%- include('./partials/navbar') %>
         </div>
         <section style="margin: 120px;">
             <div>
                 <h1 class="top-heading">Share your creativity with the world today!</h1>
-                <div class="dept">
-                    <form method="post" action="/sell">
+                <form action="/sell" method="post" name="art-form" enctype="multipart/form-data">
+                    <div class="form-group">
                         <table id="appt-table" class="table">
                             <tr class="trow">
                                 <td>
@@ -63,7 +64,8 @@
                             </tr>
                             <tr class="trow">
                                 <td>
-                                    <label for="description" class="label-font">What makes your masterpiece unique? </label>
+                                    <label for="description" class="label-font">What makes your masterpiece unique?
+                                    </label>
                                 </td>
                                 <td>
                                     <h4>
@@ -93,14 +95,16 @@
                                 </td>
                             </tr>
                             <tr class="trow">
-                                <td><label for="date" class="label-font">Date of Creation of this Masterpiece: </label></td>
+                                <td><label for="date" class="label-font">Date of Creation of this Masterpiece:
+                                    </label>
+                                </td>
                                 <td>
                                     <h4>
                                         <input type="datetime-local" name="creationDate" id="creationDate">
                                     </h4>
                                 </td>
-                                </tr>
-                            <tr class="trow">
+                            </tr>
+                            <!-- <tr class="trow">
                                 <td>
                                     <label for="name">Your Preferred Name: </label>
                                 </td>
@@ -109,30 +113,26 @@
                                         <input class="form-control" type="text" id="listedBy" name="listedBy" required>
                                     </h4>
                                 </td>
-                            </tr>
+                            </tr> -->
                             <tr class="trow">
                                 <td>
                                     <label for="name">Upload your Masterpiece: </label>
                                 </td>
                                 <td>
-                                    <canvas id="space">
-
-                                    </canvas>
-
-                                 <div id="buttons">
-                                    <input type="file" multiple="false" accept="image/*" id="finput"
-                                        onchange="upload()">
-                                    </td>
+                                    <div class="input-group mb-3">
+                                        <input type="file" class="form-control" id="image" name="image">
+                                        <label class="input-group-text" for="image">Upload</label>
+                                    </div>
+                                </td>
                             </tr>
                             </tr>
                         </table>
                         <div class="lg-6">
                             <button class="btn-primary btn-md history-btn1">Submit Work</button>
                         </div>
-                        <div class="lg-6">
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                </form>
+            </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
             integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
@@ -140,7 +140,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
             integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
             crossorigin="anonymous"></script>
-        <script src="sell.js"></script>
 </body>
 
 
