--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,6 +1,6 @@
 <% if(success && success.length) {%>
 
-    <div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 500px;">
+    <div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 500px; margin-top: 40px;">
         <%= success %>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
