--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,6 +18,7 @@
 
 <body>
 
+  <div id="preloader"></div>
   <img src="" alt="" style="height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     background-size: cover; background-position: center; text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); box-shadow:
@@ -34,6 +35,12 @@
   </div>
 
 
+  <script>
+    var loader = document.getElementById("preloader");
+    window.addEventListener("load", () => {
+      loader.style.display = "none";
+    })
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
     integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
     crossorigin="anonymous"></script>
