--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -62,7 +62,7 @@ body {
 }
 
 #preloader {
-    background: #ffff url(../images/preloader.gif) no-repeat center center;
+    background: #282828 url(../images/preloader2.gif) no-repeat center center;
     background-size: 15%;
     height: 100vh;
     width: 100%;
