--- a/public/styles/painting.css
+++ b/public/styles/painting.css
@@ -1,65 +1,83 @@
 .st-navbar-desktop-logo-link {
-    text-decoration: none;
-    color: white;
-    letter-spacing: 4px;
-    font-size: large;
+  text-decoration: none;
+  color: white;
+  letter-spacing: 4px;
+  font-size: large;
+}
+
+#preloader {
+  background: #282828 url(../images/preloader2.gif) no-repeat center center;
+  background-size: 15%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 10000;
 }
 
 .st-navbar-desktop-menu {
-    text-decoration: none;
-    color: white;
-    letter-spacing: 4px;
-    font-size: medium;
+  text-decoration: none;
+  color: white;
+  letter-spacing: 4px;
+  font-size: medium;
 }
 
 .midPage-logo {
-    font-family: 'Shadows Into Light', cursive;
-    font-size: 18px;
-    letter-spacing: 10px;
-    font-size: medium;
-    color: white;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 18px;
+  letter-spacing: 10px;
+  font-size: medium;
+  color: white;
 }
 
 body {
-    
-    background-image:
-        url("../images/cloudbg.jpg");
-    background-size: cover;
-    background-position: center;
-    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-    background-attachment: fixed;
+
+  background-image:
+    url("../images/cloudbg.jpg");
+  background-size: cover;
+  background-position: center;
+  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+  background-attachment: fixed;
 }
-.whole-card{
+
+.whole-card {
   padding-left: 30%;
 }
+
 .card {
-    flex-direction: row;
+  flex-direction: row;
+}
+
+.card-title {
+  font-weight: bold;
+}
+
+.card img {
+  width: 30%;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: calc(0.25rem - 1px);
+}
+
+@media only screen and (max-width: 768px) {
+  a {
+    display: none;
   }
-  .card-title {
-    font-weight: bold;
+
+  .card-body {
+    padding: 0.5em 0.5em;
+    fill-opacity: 0.5;
   }
+
+  .card-body .card-text {
+    margin: 20px;
+  }
+
   .card img {
-    width: 30%;
-    border-top-right-radius: 0;
-    border-bottom-left-radius: calc(0.25rem - 1px);
+    width: 50%;
   }
-  @media only screen and (max-width: 768px) {
-    a {
-      display: none;
-    }
-    .card-body {
-      padding: 0.5em 0.5em;
-      fill-opacity: 0.5;
-    }
-    .card-body .card-text {
-      margin: 20px;
-    }
-    .card img {
-      width: 50%;
-    }
+}
+
+@media only screen and (max-width: 1200px) {
+  .card img {
+    width: 40%;
   }
-  @media only screen and (max-width: 1200px) {
-    .card img {
-      width: 40%;
-    }
-  }
+}
